<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewAccountFragment" >

    <EditText
        android:id="@+id/createNewFragementName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/name_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createNewFragementEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/createNewFragementName"
        app:layout_constraintStart_toStartOf="@+id/createNewFragementName"
        app:layout_constraintTop_toBottomOf="@+id/createNewFragementName" />

    <EditText
        android:id="@+id/createNewFragementPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/createNewFragementEmail"
        app:layout_constraintStart_toStartOf="@+id/createNewFragementEmail"
        app:layout_constraintTop_toBottomOf="@+id/createNewFragementEmail" />

    <Button
        android:id="@+id/createNewFragementSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit_label"
        app:layout_constraintEnd_toEndOf="@+id/createNewFragementPassword"
        app:layout_constraintStart_toStartOf="@+id/createNewFragementPassword"
        app:layout_constraintTop_toBottomOf="@+id/createNewFragementPassword" />

    <TextView
        android:id="@+id/createNewFragementCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancel_label"
        app:layout_constraintEnd_toEndOf="@+id/createNewFragementSubmit"
        app:layout_constraintTop_toBottomOf="@+id/createNewFragementSubmit" />

</androidx.constraintlayout.widget.ConstraintLayout>