<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewForumFragment" >

    <EditText
        android:id="@+id/newForumTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/forum_title_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newForumDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/forum_description_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/newForumTitle"
        app:layout_constraintStart_toStartOf="@+id/newForumTitle"
        app:layout_constraintTop_toBottomOf="@+id/newForumTitle" />

    <Button
        android:id="@+id/newForumSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit_label"
        app:layout_constraintEnd_toEndOf="@+id/newForumDescription"
        app:layout_constraintStart_toStartOf="@+id/newForumDescription"
        app:layout_constraintTop_toBottomOf="@+id/newForumDescription" />

    <TextView
        android:id="@+id/newForumCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_label"
        app:layout_constraintEnd_toEndOf="@+id/newForumSubmit"
        app:layout_constraintTop_toBottomOf="@+id/newForumSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>