<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment" >

    <EditText
        android:id="@+id/loginFragmentEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/email_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginFragmentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginFragmentEmail"
        app:layout_constraintStart_toStartOf="@+id/loginFragmentEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginFragmentEmail" />

    <Button
        android:id="@+id/loginFragmentLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_label"
        app:layout_constraintEnd_toEndOf="@+id/loginFragmentPassword"
        app:layout_constraintStart_toStartOf="@+id/loginFragmentPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginFragmentPassword" />

    <TextView
        android:id="@+id/loginFragmentCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_account__label"
        app:layout_constraintEnd_toEndOf="@+id/loginFragmentLogin"
        app:layout_constraintStart_toStartOf="@+id/loginFragmentLogin"
        app:layout_constraintTop_toBottomOf="@+id/loginFragmentLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>